# libballistics_improved

./: .gitignore  CMakeLists.txt  README.md  ballistics.c  example.c  native.sh  wasm.sh
build_wasm/: CMakeCache.txt  Makefile  example.html  example.js  example.wasm
include/ballistics/: ballistics.h  drag.h
